<resources>
    <string name="haru_developing_function">Function under development.</string>
    <string name="haru_memo">Memong</string>
    <string name="haru_log_moudle_name">Memong</string>
    <string name="haru_common_layout_save">Save</string>
    <string name="haru_common_layout_save_button">Save</string>
    <string name="haru_common_layout_image_selected">Select</string>
    <string name="haru_common_layout_image_selected_delete">Delete Selected</string>
    <string name="haru_common_layout_cancel">Cancel</string>
    <string name="haru_common_layout_confirm">Confirm</string>
    <string name="haru_common_layout_close">Close</string>
    <string name="haru_header_create_mode_title">New Memo</string>
    <string name="haru_header_modify_mode_title">Edit Memo</string>
    <string name="haru_header_date_mode_unavailable_when_custom_sort">“Custom Order” disables date mode.</string>
    <string name="haru_header_tag_mode_unavailable_when_custom_sort">“Custom Order” disables tag mode.</string>
    <string name="haru_section_layout_lock_memo">Lock Memo</string>
    <string name="haru_section_layout_important_memo">Important Memo</string>
    <string name="haru_section_section_today">Today</string>
    <string name="haru_section_section_yesterday">Yesterday</string>
    <string name="haru_section_section_last7">Previous 7 days</string>
    <string name="haru_section_section_last30">Previous 30 days</string>
    <string name="haru_section_section_untagged">Untagged Memo</string>
    <string name="haru_header_selected_mode_count_text">%1$s/%2$s</string>
    <string name="haru_header_selected_mode_copy_memo">_Copy</string>
    <string name="haru_header_selected_mode_copy_memo_success">Selected memo(s) copied.</string>
    <string name="haru_header_selected_mode_copy_memo_failed">No memo to copy.</string>
    <string name="haru_header_selected_mode_copy_memo_just_one_selected">Select exactly one to copy.</string>
    <string name="haru_mode_title_hint">Enter title</string>
    <string name="haru_mode_body_hint">Enter content</string>
    <string name="haru_create_write_memo_mode_save">Memo saved.</string>
    <string name="haru_create_write_memo_mode_no_save">There is no memo content to save.</string>
    <string name="haru_create_write_memo_mode_button">Add New Memo</string>
    <string name="haru_modify_memo_mode_update">Memo updated.</string>
    <string name="haru_share_text">Please select a memo to share.</string>
    <string name="haru_image_share">Share image</string>
    <string name="haru_image_delete_success">Image deleted.</string>
    <string name="haru_image_delete_failed">Cannot delete image in read mode.</string>
    <string name="haru_image_download">Image saved.</string>
    <string name="haru_image_download_failed">Failed to save image.</string>
    <string name="haru_image_download_failed_permission">Storage permission is required.</string>
    <string name="haru_tutorial_main_title_step_1">New Memo</string>
    <string name="haru_tutorial_main_desc_step_1">Quickly jot down your thoughts before they fade.</string>
    <string name="haru_tutorial_main_title_step_2">Search</string>
    <string name="haru_tutorial_main_desc_step_2">Find your memos instantly by keyword or tag.</string>
    <string name="haru_tutorial_main_title_step_3">Sort Options</string>
    <string name="haru_tutorial_main_desc_step_3">View your memos organized by date or tag.</string>
    <string name="haru_tutorial_main_title_step_4">View Mode</string>
    <string name="haru_tutorial_main_desc_step_4">Switch freely between list and grid layouts.</string>
    <string name="haru_tutorial_main_title_step_5">Memo Settings</string>
    <string name="haru_tutorial_main_desc_step_5">Explore helpful tools and options in Memo Settings.</string>
    <string name="haru_tutorial_main_title_edit_1">Manage Memo</string>
    <string name="haru_tutorial_main_desc_edit_1">Long press a memo to share, copy or delete it.</string>
    <string name="haru_tutorial_main_title_detail_1">Edit Memo</string>
    <string name="haru_tutorial_main_desc_detail_1">Tap the screen to edit your memo.\n\n🔍 Search within your memos.\n\n☰ Open the menu to explore more options.</string>
    <string name="haru_set_default">Settings</string>
    <string name="haru_set_memo">Memo Settings</string>
    <string name="haru_set_backup">Backup Settings</string>
    <string name="haru_set_password">Password Settings</string>
    <string name="haru_set_tag">Tag Settings</string>
    <string name="haru_trash">Trash</string>
    <string name="haru_service_info">Support</string>
    <string name="haru_write_review">Leave a Review</string>
    <string name="haru_current_version">Version</string>
    <string name="haru_setting_current_version">Current version %1$s</string>
    <string name="haru_exam_current_version">Current version 2.9.5</string>
    <string name="haru_exam_version_name">1.0.0</string>
    <string name="haru_title_quick_memo">Quick Memo</string>
    <string name="haru_item_title_use_noti_memo">Enable Notification Memo</string>
    <string name="haru_item_desc_use_noti_memo">Allows quick memos via the notification panel,\nand enables “Point Home”.</string>
    <string name="haru_item_title_use_ss_memo">Screenshot Memo</string>
    <string name="haru_item_desc_use_ss_memo">Allows immediate memos from captured images.\nNote: may not work on some devices.</string>
    <string name="haru_item_title_use_cb_memo">Clipboard Memo</string>
    <string name="haru_item_desc_use_cb_memo">Allows direct memo from copied content.</string>
    <string name="haru_item_title_use_ls_memo">Lock-screen Memo</string>
    <string name="haru_item_desc_use_ls_memo">Write memos from lock screen without opening the app.</string>
    <string name="haru_title_set_list">Memo List Settings</string>
    <string name="haru_item_tile_thumbnail">Large Thumbnails</string>
    <string name="haru_item_title_size">Large One-line Memo Title</string>
    <string name="haru_title_set_memo">Custom Memo</string>
    <string name="haru_item_title_memo_text_size">Memo Text Size</string>
    <string name="haru_item_turn_off_title_memo_text">Title Function</string>
    <string name="haru_item_turn_off_desc_memo_text">If disabled, the title area will appear.</string>
    <string name="haru_item_title_checked_memo_auto_sort">Auto-sort Checked Items</string>
    <string name="haru_item_desc_checked_memo_auto_sort">Automatically move checked items to bottom.</string>
    <string name="haru_item_title_quick_page">Open as Page</string>
    <string name="haru_item_desc_quick_page">Links web pages, phone numbers, and emails.</string>
    <string name="haru_title_pointhome">PointHome Settings</string>
    <string name="haru_item_title_pointhome">PointHome On / Off</string>
    <string name="haru_item_desc_pointhome">Set whether PointHome is displayed.</string>
    <string name="haru_item_warn_pointhome">If PointHome is Off, it won’t show for 25 weeks.</string>
    <string name="haru_title_local_backup">Device Backup</string>
    <string name="haru_item_title_local_backup">Backup Data</string>
    <string name="haru_item_locate_backup_file">Backup Location: /Download/Memong</string>
    <string name="haru_item_desc_local_backup">
        ※ Backup path is fixed to /Download/Memong.\nData loss may occur if changes are made.
    </string>
    <string name="haru_item_title_locate_backup_storage">Backup Storage Location</string>
    <string name="haru_exam_locate_backup_storage">Device Backup Folder</string>
    <string name="haru_item_title_set_photo_backup">Photo Backup Option</string>
    <string name="haru_item_summary_set_photo_backup_en">Attached photos will be backed up with your memos.</string>
    <string name="haru_item_title_set_auto_backup">Auto Backup</string>
    <string name="haru_item_summary_set_auto_backup">Your memos are automatically backed up when you create or edit them.</string>
    <string name="haru_item_free_space">Available Space</string>
    <string name="haru_exam_free_space">84.7 GB / 107.6 GB</string>
    <string name="haru_item_title_current_backup_date">Last Backup Date</string>
    <string name="haru_item_desc_current_backup_date">Device Backup Folder</string>
    <string name="haru_exam_current_backup_date">May 13, 2025 (Tue) 2:14 PM</string>
    <string name="haru_title_gd_backup">Google Drive Backup</string>
    <string name="haru_item_title_gd_account">Connect Account</string>
    <string name="haru_item_desc_gd_account">Google Drive account linkage is required.</string>
    <string name="haru_item_title_gd_backup">Backup to Google Drive</string>
    <string name="haru_item_title_gd_current_backup_date">Last Google Backup</string>
    <string name="haru_exam_gd_current_backup_date">None</string>
    <string name="haru_title_manage">Manage Backup Files</string>
    <string name="haru_item_title_restore">Restore Data</string>
    <string name="haru_item_desc_restore">Replaces current memos with backup data.</string>
    <string name="haru_item_title_email">Send Backup by Email</string>
    <string name="haru_item_desc_email">Store memo contents via email.</string>
    <string name="haru_item_title_show_backup_guide">Show Backup Guide</string>
    <string name="haru_item_desc_show_backup_guide">Periodically show backup status reminders.</string>
    <string name="haru_item_title_noti_backup">Show Auto-backup Notification</string>
    <string name="haru_item_desc_noti_backup">Notify via system notification during auto backup.</string>
    <string name="haru_backup_storage_info">%.1f GB / %.1f GB</string>
    <string name="haru_backup_guide_use">View Backup Method</string>
    <string name="haru_backup_guide_next">Next</string>
    <string name="haru_backup_guide_start_backup">Start Backup</string>
    <string name="haru_backup_guide_dialog_permission_title">Allow Contacts Permission</string>
    <string name="haru_backup_guide_dialog_permission_required">(Required)</string>
    <string name="haru_backup_guide_dialog_permission_message">To use Google Drive backup,\ncontacts permission is required.</string>
    <string name="haru_backup_guide_dialog_permission_go">Go to Allow</string>
    <string name="haru_backup_dialog_disconnect_title">Disconnect Google Account</string>
    <string name="haru_backup_dialog_disconnect_message">Disconnect linked Google Drive account?</string>
    <string name="haru_backup_dialog_disconnect_sub">Previously backed up memos remain stored on Google Drive.</string>
    <string name="haru_backup_dialog_disconnect_confirm">Disconnect</string>
    <string name="haru_title_set_password">Set a password for important memos.</string>
    <string name="haru_item_title_set_password">Set Password</string>
    <string name="haru_item_title_change_password">Change Password</string>
    <string name="haru_title_use_simplify_lock_memo">Convenience for Secret Memo</string>
    <string name="haru_item_title_lock_check_simplify">Simplified Password Prompt</string>
    <string name="haru_location">Pangyo-dong, Seongnam</string>
    <string name="haru_date">5.19 (Mon)</string>
    <string name="haru_time">1:49</string>
    <string name="haru_am_pm">PM</string>
    <string name="haru_temperature_main">17°</string>
    <string name="haru_temperature_sub">10° / 20°</string>
    <string name="haru_temperature_diff">3° lower than yesterday</string>
    <string name="haru_pm10">PM10</string>
    <string name="haru_pm25">PM2.5</string>
    <string name="haru_pm_good">Very Good</string>
    <string name="haru_pm_bad">Slightly Poor</string>
    <string name="haru_settings">Settings</string>
    <string name="haru_favorite_memo">Favorite Memos</string>
    <string name="haru_view_as_calendar">View as Calendar</string>
    <string name="haru_slide_to_unlock">Slide to Unlock</string>
    <string name="haru_lock_screen_ls_weather_provide">Weather data provided by Open-Meteo (https://open-meteo.com)</string>
</resources>