<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/bg_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ← Back -->
        <FrameLayout
            android:id="@+id/lyBack"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_header_back" />
        </FrameLayout>


        <!-- 중앙 텍스트 (모드에 따라 "새 메모하기", "메모 수정하기" 등) -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="제목"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/lyBack"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 비밀메모 잠금 아이콘 -->
        <FrameLayout
            android:id="@+id/lyLock"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/lyBack"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/btnLock"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_item_lock" />
        </FrameLayout>

        <!-- 액션 버튼 1 -->
        <FrameLayout
            android:id="@+id/lyAction1"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lyAction2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnAction1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_header_check" />
        </FrameLayout>

        <!-- 액션 버튼 2 -->
        <FrameLayout
            android:id="@+id/lyAction2"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lyAction3"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnAction2"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_header_check" />
        </FrameLayout>

        <!-- 액션 버튼 3 -->
        <FrameLayout
            android:id="@+id/lyAction3"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lyAction4"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnAction3"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_header_check" />
        </FrameLayout>

        <!-- 액션 버튼 4 -->
        <FrameLayout
            android:id="@+id/lyAction4"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnAction4"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_header_check" />
        </FrameLayout>


        <!-- ← 이미지 선택 -->
        <FrameLayout
            android:id="@+id/lyImageSelected"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lySave"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvImageSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/haru_common_layout_image_selected"
                android:textColor="@color/haru_black"
                android:textSize="16sp" />
        </FrameLayout>

        <!-- ← 선택삭제 -->
        <FrameLayout
            android:id="@+id/lyImageSelectedDelete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvImageSelectedDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/haru_common_layout_image_selected_delete"
                android:textColor="@color/haru_black"
                android:textSize="16sp" />
        </FrameLayout>


        <!-- ← 저장 -->
        <FrameLayout
            android:id="@+id/lySave"
            android:layout_width="@dimen/dimen_header_icone_space_padding"
            android:layout_height="@dimen/dimen_header_icone_space_padding"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/haru_common_layout_save_button"
                android:textColor="@color/haru_black"
                android:textSize="16sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- divideView: 패딩 영향 받지 않게 FrameLayout의 child로 배치 -->
    <View
        android:id="@+id/divideView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="#E4E8ED" />
</FrameLayout>


